# phonebook-cpp

./: .gitignore  CMakeLists.txt  contact.cpp  contact.hpp  database.txt  main.cpp  menu.cpp  menu.hpp  phone.cpp  phone.hpp  phonebook.cpp  phonebook.hpp  string5.cpp  string5.h  test.cpp  test.hpp  vector.hpp
NHF2 - Terv/: NHF_Terv.docx  UML_diagram.drawio
NHF3 - Skeleton/: CMakeLists.txt  contact.hpp  menu.cpp  phone.hpp  phonebook.cpp  phonebook.hpp  string5.cpp  string5.h  test.cpp
NHF4 - Végleges - String/: contact.hpp  main.cpp  menu.cpp  menu.hpp  phone.hpp  phonebook.cpp  phonebook.hpp  string5.h  szabvanyos bemenet.txt  test.cpp
